--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  /* cursor: default; */
 }
 .desktop {
   background-image: url("./img/desktop.jpg");
@@ -541,8 +542,340 @@
 .turnOffFooter button:hover{
   border: 2px solid rgb(170, 170, 8);
 }
-.greyDesktop{
-  background-image: url("./img/desktop.jpg");
-  opacity: 0.7;
-  filter: grayscale(80%);
+.openedWindow{
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 800px;
+  height: 500px;
+  border-radius: 10px 10px 2px 2px;
+  background-color: white;
+  overflow: hidden;
+  border-bottom: 2px solid rgb(0, 82, 214);
+  border-right: 2px solid rgb(0, 82, 214);
+  border-left: 2px solid rgb(0, 82, 214);
+}
+.windowHeader{
+  display: flex;
+  justify-content: space-between;
+  background:linear-gradient(rgb(0, 88, 238) 0%, rgb(53, 147, 255) 4%, rgb(40, 142, 255) 6%, rgb(18, 125, 255) 8%, rgb(3, 111, 252) 10%, rgb(2, 98, 238) 14%, rgb(0, 87, 229) 20%, rgb(0, 84, 227) 24%, rgb(0, 85, 235) 56%, rgb(0, 91, 245) 66%, rgb(2, 106, 254) 76%, rgb(0, 98, 239) 86%, rgb(0, 82, 214) 92%, rgb(0, 64, 171) 94%, rgb(0, 48, 146) 100%);
+}
+.leftSideOpen{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.rightSideOpen{
+  padding: 8px;
+}
+.leftSideOpen img{
+  width: 20px;
+}
+.leftSideOpen p{
+  color: white;
+  padding-left: 6px;
+  font-weight: 200;
+}
+.functionBtn{
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  border: 1px solid white;
+  background: #5979ef;
+  color: white;
+  margin: 1px;
+  background-image: radial-gradient(circle at 90% 90%, rgb(0, 84, 233) 0%, rgb(34, 99, 213) 55%, rgb(68, 121, 228) 70%, rgb(163, 187, 236) 90%, white 100%);;
+  opacity: 0.8;
+  font-size: 18px;
+}
+.functionBtn:hover{
+  opacity: 1;
+}
+.navBarMain{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  background: linear-gradient(to right, rgb(237, 237, 229) 0%, rgb(237, 232, 205) 100%);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.navBarMain div{
+  display: flex;
+  font-weight: 300;
+  font-size: 0.9rem;
+  
+}
+.navBarMain p{
+  margin: 1px 5px;
+  padding: 2px 4px;
+  
+}
+.navBarMain div p:hover{
+  background-color: rgb(0, 88, 238);
+  cursor: default;
+  color: white;
+}
+.navBarFlag{
+  height: 24px;
+  padding: 2px 10px;
+  background-color: white;
+}
+.navBarIcon{
+  background: linear-gradient(to right, rgb(237, 237, 229) 0%, rgb(237, 232, 205) 100%);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 3px 5px;
+}
+.navBarIcon img{
+  height: 30px;
+}
+.arrowNav{
+  display: flex;
+  /* align-items: center; */
+  border-right: 1px solid rgba(159, 158, 158, 5);
+  /* padding-right: 5px; */
+  font-size: 0.7rem;
+  padding-right: 8px;
+  padding-left: 4px;
+}
+.arrowNavEnd{
+  display: flex;
+  align-items: center;
+  /* padding-right: 5px; */
+  font-size: 0.8rem;
+  padding-left: 4px;
+}
+.arrowNav div,
+.arrowNavEnd div{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 5px 10px;
+  outline: 1px solid transparent; 
+  cursor: default;
+}
+.activeIcon:hover{
+  outline-color: rgba(159, 158, 158, 0.3);
+  border-radius: 3px;
+}
+.grayScale{
+  filter: grayscale(1);
+}
+.footerNavBar{
+  background: linear-gradient(to right, rgb(237, 237, 229) 0%, rgb(237, 232, 205) 100%);
+  display: flex;
+  justify-content: space-between;
+  /* width: 100%; */
+}
+.footerNavBar div{
+  display: flex;
+  align-items: center;
+}
+.footerNavBar div img{
+  height: 18px;
+}
+.greyFont{
+  color: grey;
+  padding-left: 5px;
+}
+.runBtn{
+  /* text-align: right; */
+  padding-right: 5px;
+}
+.runBtn img{
+  padding: 0 2px;
+}
+.leftMainContent{
+  background: linear-gradient(rgb(116, 138, 255) 0%, rgb(64, 87, 211) 100%);
+  min-height: 100%;
+  width: 25%;
+}
+.currentFolder{
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  width: 80%;
+  border: 1px solid rgba(159, 158, 158, 0.3);
+}
+.currentFolder span{
+  display: flex;
+  align-items: center;
+}
+.currentFolder > span > p{
+  font-size: 0.8rem;
+  padding: 0 5px;
+}
+.windowContent{
+ 
+}
+.windowMainContent{
+  display: flex;
+  height: 100%;
+}
+.systemTask{
+  padding: 10px;
+}
+.systemTask .taskWindow{
+  display: flex;
+  justify-content: space-between;
+  color: rgb(12, 50, 125);
+  font-weight: 700;
+  background: linear-gradient(to right, rgb(240, 240, 255) 0px, rgb(240, 240, 255) 30%, rgb(168, 188, 255) 100%);
+
+}
+.systemTask .taskWindow img{
+  filter: drop-shadow(1px 1px 1px black);
+}
+.taskWindow{
+  padding: 5px;
+  border-radius: 5px 5px 0 0;
+  cursor: default;
+}
+.iconTask{
+  display: flex;
+  color: rgb(12, 50, 125);
+  font-size: 0.7rem;
+  background: linear-gradient(to right, rgb(180, 200, 251) 0%, rgb(164, 185, 251) 50%, rgb(180, 200, 251) 100%) rgba(198, 211, 255, 0.87);
+  padding: 2px;
+}
+.iconTask:hover{
+  text-decoration: underline;
+  color: rgb(50, 111, 233);
+}
+.nameIconTask{
+  cursor: pointer;
+}
+.rightMainContent{
+  width: 75%;
+}
+.titleOfGroup{
+  font-weight: bold;
+  font-size: 0.8rem;
+  padding: 5px 0 0 10px;
+}
+.filesOfGroup{
+  display: flex;
+}
+.filesIcon{
+  display: flex;
+  align-items: center;
+  margin: 20px 25px;
+}
+.filesIcon>div>p{
+  font-weight: 300;
+  font-size: 0.8rem;
+  padding-left: 10px;
+}
+.filesIcon > img{
+  height: 45px;
+}
+.borderBotOfGroup{
+  height: 2px;
+  background: linear-gradient(90deg, rgba(41,107,224,1) 0%, rgba(255,255,255,1) 50%);
+  margin-top: 4px;
+}
+.startMenuChild{
+  display: flex;
+  align-items: center;
+}
+.navbarCard{
+  margin-left: 5px;
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 200;
+  background-color: rgb(30, 82, 183);
+  box-shadow: rgba(0, 0, 0, 0.3) -1px 0px inset, rgba(255, 255, 255, 0.2) 1px 1px 1px inset;
+  padding: 2px 50px 2px 5px;
+  cursor: default;
+  border-radius: 3px;
+}
+.navbarCard div{
+  display: flex;
+  align-items: center;
+}
+.navbarCard img{
+  height: 24px;
+}
+.navbarCard:hover{
+  background-color: rgb(60, 129, 243);
+}
+.explorerLink{
+  white-space: nowrap;
+  color: gray;
+  border-left: 1px solid rgba(159, 158, 158, 5);
+  font-size: 0.8rem;
+}
+.googleContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.googleContent .googleTitle{
+  height: 80px;
+  width: 250px;
+  margin-top: 50px;
+}
+.googleSearch{
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  /* flex-direction: row; */
+  border: 1px solid rgba(159, 158, 158, 5);
+  margin-top: 30px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 1px rgba(159, 158, 158, 0.5);
+}
+.googleSearch input{
+  height: 100%;
+  width: 100%;
+  border: none;
+  cursor: default;
+}
+.googleSearch input:focus{
+  outline: none;
+  font-size: 1.5rem;
+  padding: 2px;
+}
+.googleSearch img{
+  height: 100%;
+  padding: 4px;
+}
+.googleSearch:hover{
+  box-shadow: 2px 2px 12px rgba(159, 158, 158, 0.5);
+}
+.googleBtns{
+  display: flex;
+  justify-content: space-evenly;
+  width: 60%;
+  padding-top: 50px;
+}
+.googleBtns p{
+  cursor: default;
+  color: rgb(120, 120, 120);
+  background: rgb(242, 242, 242);
+  padding: 8px;
+  font-weight: bold;
+  border: 1px solid transparent;
+}
+.googleBtns p:hover{
+  border: 1px solid rgba(159, 158, 158, 5);
+  color: black;
+  box-shadow: 0 1px 1px rgba(159, 158, 158, 5);
+}
+.openedExplorer{
+  position: absolute;
+  top: 10%;
+  left: 55%;
+  transform: translateX(-50%);
+  width: 800px;
+  height: 500px;
+  border-radius: 10px 10px 2px 2px;
+  background-color: white;
+  overflow: hidden;
+  border-bottom: 2px solid rgb(0, 82, 214);
+  border-right: 2px solid rgb(0, 82, 214);
+  border-left: 2px solid rgb(0, 82, 214);
 }
